...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:drawableLeft="@drawable/baseline_badge_white_18dp"
...
                android:inputType="textPassword"
                android:textColor="@color/colorTextIcons"
                android:textColorHint="@color/colorSecondaryText"
                app:fontFamily="@font/roboto" />

            <Button
                android:id="@+id/idSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userConfirmPassword"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
...
